Corrected selector names, fixed small issue where page was overflowing due to applied margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,13 +24,16 @@ body {
 }
 
 /* navbar styling */
-div.navbar {
+nav.navbar {
     z-index: 10;
     position: fixed;
     line-height: 2.8rem;
-    width: 100vw;
+    padding:0;
+    margin:0;
+    width: 100%;
     height: 10rem;
     box-shadow: 0rem .4rem rgba(33, 37, 41, 0.1);
+    background-color: #F39237;
 }
 
 .navbar a.navbar-brand {
@@ -97,6 +100,7 @@ ul div {
 section.landing-page {
     height: 100vh;
     top: 10rem;
+    margin:0;
     position: relative;
     background-color: #F9F9F9;
 }
